# tmdb_rust_api

./: .env  Cargo.toml  README.md
front-react/: package.json
front-react/src/: index.js
migrations/2019-08-26-032148_create_users/: down.sql  up.sql
src/: consume_api.rs  db.rs  graphql.rs  graphql_types.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  tmdb.rs
