[package]
name = "tmdb_rust_react"
version = "0.1.0"
authors = ["1kh4l <jhon.pantoja@correounivalle.edu.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.2.2", features = ["postgres"] }
dotenv = "0.11.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.43"
serde_derive = "1.0.43"
serde_json = "1.0.16"
rocket = "0.4.2"
rocket_cors = "0.5.0"
rocket_contrib = "0.4.2"
reqwest = "0.9.20"
